--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3": "^5.0.0",
+    "epoch-charting": "^0.8.4",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-modal": "^3.3.2",
+    "react-rt-chart": "^1.3.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
